Added process/thread protector to HzrFilter

--- a/HzrFilter/HzrFilter.vcxproj.filters
+++ b/HzrFilter/HzrFilter.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="Utility.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Protect.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="HzrFilter.rc">
@@ -62,6 +65,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Utility.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Protect.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
