--- a/LibNTFS/LibNTFS/LibNTFS.vcxproj.filters
+++ b/LibNTFS/LibNTFS/LibNTFS.vcxproj.filters
@@ -23,5 +23,13 @@
     <ClInclude Include="Ntfs.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="LibNTFS.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
