Added logger to Hazard Shield Fixed Hazard Shield UI dependency

--- a/HazardShield/HazardShield/HazardShield.csproj
+++ b/HazardShield/HazardShield/HazardShield.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
