--- a/HazardShield/HazardShieldUI/HazardShieldUI.csproj
+++ b/HazardShield/HazardShieldUI/HazardShieldUI.csproj
@@ -94,6 +94,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\HazardShield\HazardShield.csproj">
+      <Project>{3d5a67f2-2be7-441e-9e94-a3385648836a}</Project>
+      <Name>HazardShield</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
