Remove unnecessary panels, and set tab backcolor instead

--- a/HazardShield/HazardShieldUI/HazardShieldUI.csproj
+++ b/HazardShield/HazardShieldUI/HazardShieldUI.csproj
@@ -112,7 +112,9 @@
       <Name>HazardShield</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\updates.png" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\scanner.png" />
   </ItemGroup>
