--- a/HazardShield/HazardShield/HazardShield.csproj
+++ b/HazardShield/HazardShield/HazardShield.csproj
@@ -59,7 +59,12 @@
   <ItemGroup>
     <Compile Include="Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scanning\ClamAV\ClamAV.cs" />
+    <Compile Include="Scanning\ClamAV\Structures.cs" />
+    <Compile Include="Updates\ClamAV\ClamUpdater.cs" />
+    <Compile Include="Updates\ClamAV\EventArgs.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
