Start work on scanner in HzrCore [unfinished]

--- a/HzrCore/HzrCoreTest/HzrCoreTest.vcxproj.filters
+++ b/HzrCore/HzrCoreTest/HzrCoreTest.vcxproj.filters
@@ -7,6 +7,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Test.c" />
+    <ClCompile Include="Test.cpp" />
   </ItemGroup>
 </Project>
