--- a/HzrCore/HzrCoreTest/HzrCoreTest.vcxproj
+++ b/HzrCore/HzrCoreTest/HzrCoreTest.vcxproj
@@ -143,7 +143,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Test.c" />
+    <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\HzrCore\HzrCore.vcxproj">
