--- a/HzrService/HzrService.vcxproj.filters
+++ b/HzrService/HzrService.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClInclude Include="Service.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ossl_typ.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="HzrService.rc">
