[HzrCore] Start working on simple memory scanner

--- a/HzrCore/HzrCore/HzrCore.vcxproj
+++ b/HzrCore/HzrCore/HzrCore.vcxproj
@@ -146,12 +146,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="clamav.h" />
+    <ClInclude Include="Memory.h" />
     <ClInclude Include="Ntfs.h" />
     <ClInclude Include="ossl_typ.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="Scanner.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Memory.c" />
     <ClCompile Include="Ntfs.c" />
     <ClCompile Include="Scanner.c" />
   </ItemGroup>
