--- a/HzrCore/HzrCore/HzrCore.vcxproj.filters
+++ b/HzrCore/HzrCore/HzrCore.vcxproj.filters
@@ -29,12 +29,18 @@
       <Filter>Scanner</Filter>
     </ClInclude>
     <ClInclude Include="resource.h" />
+    <ClInclude Include="Memory.h">
+      <Filter>Scanner</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ntfs.c">
       <Filter>LibNTFS</Filter>
     </ClCompile>
     <ClCompile Include="Scanner.c">
+      <Filter>Scanner</Filter>
+    </ClCompile>
+    <ClCompile Include="Memory.c">
       <Filter>Scanner</Filter>
     </ClCompile>
   </ItemGroup>
