--- a/HzrCore/HzrCore/HzrCore.vcxproj.filters
+++ b/HzrCore/HzrCore/HzrCore.vcxproj.filters
@@ -44,6 +44,9 @@
     <ClInclude Include="Reference.h">
       <Filter>Core</Filter>
     </ClInclude>
+    <ClInclude Include="String2.h">
+      <Filter>Core</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ntfs.c">
@@ -59,6 +62,9 @@
       <Filter>Core</Filter>
     </ClCompile>
     <ClCompile Include="Reference.c">
+      <Filter>Core</Filter>
+    </ClCompile>
+    <ClCompile Include="String2.c">
       <Filter>Core</Filter>
     </ClCompile>
   </ItemGroup>
