--- a/HsCore/LibNTFS/LibNTFS.vcxproj
+++ b/HsCore/LibNTFS/LibNTFS.vcxproj
@@ -153,6 +153,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Ntfs.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Ntfs.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
