--- a/HsCore/LibNTFS/LibNTFS.vcxproj.filters
+++ b/HsCore/LibNTFS/LibNTFS.vcxproj.filters
@@ -6,4 +6,10 @@
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Ntfs.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Ntfs.c" />
+  </ItemGroup>
 </Project>
