[HsCore] Move LibNTFS to HsCore

--- a/HsCore/HsCore/HsCore.vcxproj.filters
+++ b/HsCore/HsCore/HsCore.vcxproj.filters
@@ -5,5 +5,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="NTFS">
+      <UniqueIdentifier>{2b9f8a3a-e309-483f-b7fc-c2db5fc14847}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Ntfs.h">
+      <Filter>NTFS</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Ntfs.c">
+      <Filter>NTFS</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
