[HsCore] Add version.rc

--- a/HsCore/HsCore/HsCore.vcxproj.filters
+++ b/HsCore/HsCore/HsCore.vcxproj.filters
@@ -13,10 +13,16 @@
     <ClInclude Include="Ntfs.h">
       <Filter>NTFS</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ntfs.c">
       <Filter>NTFS</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="HsCore.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
