--- a/HsCore/HsCore/HsCore.vcxproj
+++ b/HsCore/HsCore/HsCore.vcxproj
@@ -154,9 +154,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Ntfs.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ntfs.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="HsCore.rc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
